cpp/include/autd3/internal/native_methods/autd3capi-gain-holo.h

void* AUTDGainHoloSDP(void* backend);
void* AUTDGainHoloEVP(void* backend);
void* AUTDGainHoloGS(void* backend);
void* AUTDGainHoloGSPAT(void* backend);
void* AUTDGainHoloNaive(void* backend);
void* AUTDGainHoloGreedy();
void* AUTDGainHoloLM(void* backend);
void AUTDGainHoloAdd(void* holo, double x, double y, double z, double amp);